--- a/index.html
+++ b/index.html
@@ -494,13 +494,14 @@
             <p class="subscribe-paragraph">Subscribe</p>
 
             <form class="form-subscribe">
-              <label class="label-subscribe" for="email"></label>
+              <label class="label-subscribe" for="email">
               <input
                 class="inpute-subscribe"
                 type="email"
                 name="email"
                 placeholder="E-mail"
               />
+              </label>
              <button class="subscibe-btn" type="submit">
             Subscribe
             <svg class="icon-subskribe" width="24" height="24">
@@ -567,7 +568,7 @@
                 placeholder="Text input"
               ></textarea>
             </div>
-          </div>
+          
 
           <div class="checkbox-wrapper">
             <input
@@ -590,6 +591,7 @@
           </div>
           <button class="modal-submit-btm" type="submit">Send</button>
         </form>
+        </div>
       </div>
     </div>
   </body>
