--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-wrapper">
+          <div class="modal-wrapper-textarea">
             <label class="modal-label" for="user-comment">Comment</label>
             
               <textarea
