--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@
             </div>
           </div>
           <div class="modal-wrapper">
-            <label class="modal-label" for="email">Email</label>
+            <label class="modal-label" for="mail">Email</label>
             <div class="modal-fielf">
-              <input class="modal-input" type="email" id="email" name="email" />
+              <input class="modal-input" type="email" id="mail" name="mail" />
               <svg class="modal-item" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
