--- a/index.html
+++ b/index.html
@@ -493,12 +493,12 @@
           <p class="subscribe-paragraph">Subscribe</p>
 
           <form class="form-subscribe">
-            <label class="label-subscribe" for="email">
+            <label class="label-subscribe" for="footer">
               <input
                 class="inpute-subscribe"
                 type="email"
                 name="email"
-                id="email"
+                id="footer"
                 placeholder="E-mail"
               />
             </label>
