--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
     <!-- MODAL FORM -->
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btm" type="button">
           <svg class="icon-close" width="8" height="8">
