add-check-focus

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
     <!-- MODAL FORM -->
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btm" type="button">
           <svg class="icon-close" width="8" height="8">
@@ -577,7 +577,6 @@
               id="user-privacy"
               name="user-privacy"
               value="true"
-              checked
             />
             <label class="modal-label-accept" for="user-privacy">
               <span class="modal-check">
